Fix visibility bug "View on GitHub" link wasn't fully visible when cookie notice was on the page

--- a/assets/global.css
+++ b/assets/global.css
@@ -57,7 +57,6 @@ body {
     display: none;
     width: 100%;
     height: 70px;
-    padding-top: 30px;
     position: absolute;
     background: --mdc-theme-primary;
     border-bottom: 2px solid #fbeed5;
